sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/Staging_Bulk_Upload_Reference_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-15978: Stores the type, request type, record limit for bulk upload.</description>
    <label>Staging Bulk Upload Reference Mapping</label>
    <pluralLabel>Staging Bulk Upload Reference Mappings</pluralLabel>
</CustomObject>