sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-15978: Stores &apos;true&apos; if the (type + request-type) combination needs to be considered for request creation and &apos;false&apos; if otherwise.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>