sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>LEM-15978: Stores error message regarding number of csv rows exceeding limit.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>