sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/fields/Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Record_Limit__c</fullName>
    <description>LEM-15978: Stores number of csv rows limit. Dependent on (type + request-type).</description>
    <label>Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>