sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>LEM-15978: Stores Request Type of the reference.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net-New</fullName>
                <default>true</default>
                <label>Net-New</label>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Marketing Kit</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>