sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-15978: Stores Type of the reference.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
                <default>true</default>
                <label>Tablet</label>
            </value>
            <value>
                <fullName>Marketing Kit</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>