sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference_Mapping__mdt/listViews/Summary.listView-meta.xml
<ListView>
    <fullName>Summary</fullName>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Record_Limit__c</columns>
    <columns>Active__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>Summary</label>
</ListView>